# mots

./: CMakeLists.txt  README.md
include/: Event.h  IPlugin.h  PluginManager.h  Test.h
plugins/AnotherPlugin/: AnotherPlugin.cpp  CMakeLists.txt
plugins/DuplicateNamePlugin/: CMakeLists.txt  DuplicateNamePlugin.cpp
plugins/SamplePlugin/: CMakeLists.txt  SamplePlugin.cpp
src/: Event.cpp  PluginManager.cpp  main.cpp
tests/: CMakeLists.txt  PluginManagerTests.cpp  Test.cpp
